test/parse/func/bad-result-empty.txt
;;; ERROR: 1
(module (func (result)))
(;; STDERR ;;;
parse/func/bad-result-empty.txt:2:22: syntax error, unexpected ), expecting VALUE_TYPE
(module (func (result)))
                     ^
;;; STDERR ;;)
